fix: use clamp to resize image text on screen resize as to not overflow parent, set min-width on inputs to wrap on screen resize

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ font-family: 'Nanum Gothic', sans-serif;
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-wrap: wrap;
   background-color: lightgray;
 }
 
@@ -29,11 +30,11 @@ font-family: 'Nanum Gothic', sans-serif;
   top: 35%;
   background-color: rgba(0,0,0, .4);
   color: aliceblue;
-  font-size: 3rem;
+  font-size: clamp(1rem, -0.5000rem + 6.6667vw, 3rem);;
   text-align: center;
   padding: 32px 0px;
   font-family: 'Nanum Gothic', sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  letter-spacing: 1.2rem;
+  letter-spacing: clamp(0.75rem, 0.4125rem + 1.5000vw, 1.2rem);;
 }
 
 .right-container{
@@ -76,6 +77,7 @@ label{
   display: flex;
   flex-direction: column;
   width: 40%;
+  min-width: 150px;
   box-shadow: none;
 }
 
@@ -91,7 +93,7 @@ input:focus{
 .btn{
   background-color: rgb(73, 104, 93);
   color: white;
-  width: 20%;
+  width: clamp(110px, 20%, 40%);
   border: none;
   padding: 8px 16px;
   border-radius: 30px;
@@ -104,8 +106,4 @@ input:focus{
   cursor: pointer;
   background-color: rgb(37,77,69);
 
-}
-
-#password-message{
-  display: none;
 }
